Quick bug fix + button spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,3 +43,7 @@ body {
   border-radius: 50%;
   margin-right: 0.5rem;
 }
+
+.button_container {
+  margin-top: 1.5rem;
+}
